# device-detector

./: .gitattributes  .gitignore  Cargo.toml  README.md
scripts/: update.ts
src/: data.rs
